// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricTileWrapper renders appropriate error if creating custom dimensions failed due to a generic error 1`] = `
<div>
  <div
    class="googlesitekit-km-widget-tile--error"
  >
    <div
      class="googlesitekit-cta googlesitekit-cta--error"
    >
      <div
        class="googlesitekit-cta__header"
      >
        <h2
          class="googlesitekit-cta__header_text"
        >
          Top categories by pageviews
        </h2>
        <span
          class=""
          title="Categories that your site visitors viewed the most"
        >
          <svg />
        </span>
      </div>
      <h3
        class="googlesitekit-cta__title"
      >
        Analytics update failed
      </h3>
      
      
      
      
      <div
        class="googlesitekit-report-error-actions"
      >
        <button
          class="mdc-button mdc-button--raised"
          target="_self"
        >
          <span
            class="mdc-button__label"
          >
            Retry
          </span>
        </button>
        <span
          class="googlesitekit-error-retry-text"
        >
          Retry didn’t work? 
          <a
            aria-label="Learn more (opens in a new tab)"
            class="googlesitekit-cta-link googlesitekit-cta-link--external"
            href="undefined?error_id=test-error-code"
            rel="noopener noreferrer"
            target="_blank"
          >
            Learn more
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`MetricTileWrapper renders appropriate error if creating custom dimensions failed due to insufficient permissions 1`] = `
<div>
  <div
    class="googlesitekit-km-widget-tile--error"
  >
    <div
      class="googlesitekit-cta googlesitekit-cta--error"
    >
      <div
        class="googlesitekit-cta__header"
      >
        <h2
          class="googlesitekit-cta__header_text"
        >
          Top categories by pageviews
        </h2>
        <span
          class=""
          title="Categories that your site visitors viewed the most"
        >
          <svg />
        </span>
      </div>
      <h3
        class="googlesitekit-cta__title"
      >
        Insufficient permissions
      </h3>
      
      
      
      
      <div
        class="googlesitekit-report-error-actions"
      >
        <span
          class="googlesitekit-error-retry-text"
        >
          Permissions updated? 
          <button
            class="googlesitekit-cta-link"
          >
            Retry
          </button>
        </span>
        <span
          class="googlesitekit-error-retry-text"
        >
          You’ll need to contact your administrator. 
          <a
            aria-label="Learn more (opens in a new tab)"
            class="googlesitekit-cta-link googlesitekit-cta-link--external"
            href="undefined?error_id=test-error-code"
            rel="noopener noreferrer"
            target="_blank"
          >
            Learn more
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`MetricTileWrapper renders appropriate error if required custom dimensions are not available 1`] = `
<div>
  <div
    class="googlesitekit-km-widget-tile--error"
  >
    <div
      class="googlesitekit-cta googlesitekit-cta--error"
    >
      <div
        class="googlesitekit-cta__header"
      >
        <h2
          class="googlesitekit-cta__header_text"
        >
          Top categories by pageviews
        </h2>
        <span
          class=""
          title="Categories that your site visitors viewed the most"
        >
          <svg />
        </span>
      </div>
      <h3
        class="googlesitekit-cta__title"
      >
        No data to show
      </h3>
      
      
      
      
      <div
        class="googlesitekit-report-error-actions"
      >
        <button
          class="mdc-button mdc-button--raised"
          target="_self"
        >
          <span
            class="mdc-button__label"
          >
            Update
          </span>
        </button>
        <span
          class="googlesitekit-error-retry-text"
        >
          Update Analytics to track metric
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`MetricTileWrapper renders report correctly if there are no errors 1`] = `
<div>
  <div
    class="googlesitekit-widget googlesitekit-widget--kmAnalyticsTopCategories googlesitekit-widget--no-padding"
  >
    <div
      class="googlesitekit-widget__body"
    >
      <div
        class="googlesitekit-km-widget-tile googlesitekit-km-widget-tile--table"
      >
        <div
          class="googlesitekit-km-widget-tile__title-container"
        >
          <h3
            class="googlesitekit-km-widget-tile__title"
          >
            Top categories by pageviews
          </h3>
          <span
            class=""
            title="Categories that your site visitors viewed the most"
          >
            <svg />
          </span>
        </div>
        <div
          class="googlesitekit-km-widget-tile__body"
        >
          <div
            class="googlesitekit-km-widget-tile__table"
          >
            <div
              class="googlesitekit-table__body-row"
            >
              <div
                class="googlesitekit-table__body-item"
              >
                <a
                  href="http://example.com"
                >
                  keyword1
                </a>
              </div>
              <div
                class="googlesitekit-table__body-item"
              >
                <strong>
                  0.112
                </strong>
              </div>
            </div>
            <div
              class="googlesitekit-table__body-row"
            >
              <div
                class="googlesitekit-table__body-item"
              >
                <a
                  href="http://example.com"
                >
                  keyword2
                </a>
              </div>
              <div
                class="googlesitekit-table__body-item"
              >
                <strong>
                  0.212
                </strong>
              </div>
            </div>
            <div
              class="googlesitekit-table__body-row"
            >
              <div
                class="googlesitekit-table__body-item"
              >
                <a
                  href="http://example.com"
                >
                  keyword3
                </a>
              </div>
              <div
                class="googlesitekit-table__body-item"
              >
                <strong>
                  0.312
                </strong>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
